--- a/render.yaml
+++ b/render.yaml
@@ -114,10 +114,7 @@ services:
   - key: APP_KEY
     generateValue: true
   region: singapore
-  buildCommand:
-      composer install --no-dev --optimize-autoloader
-      npm install && npm run build
-      php artisan migrate --force
+  buildCommand: composer install --no-dev --optimize-autoloader npm install && npm run build php artisan migrate --force
   startCommand: php artisan serve --host 0.0.0.0 --port 10000
   autoDeployTrigger: commit
 version: "1"
