--- a/render.yaml
+++ b/render.yaml
@@ -1,118 +1,17 @@
-# Exported from Render on 2025-09-06T03:47:06Z
 services:
-- type: web
-  name: lib_app-laravel-
-  env: php
-  plan: free
-  envVars:
-  - key: VITE_APP_NAME
-    sync: false
-  - key: AWS_USE_PATH_STYLE_ENDPOINT
-    sync: false
-  - key: AWS_BUCKET
-    sync: false
-  - key: AWS_DEFAULT_REGION
-    sync: false
-  - key: AWS_SECRET_ACCESS_KEY
-    sync: false
-  - key: AWS_ACCESS_KEY_ID
-    sync: false
-  - key: MAIL_FROM_NAME
-    sync: false
-  - key: MAIL_FROM_ADDRESS
-    sync: false
-  - key: MAIL_PASSWORD
-    sync: false
-  - key: MAIL_USERNAME
-    sync: false
-  - key: MAIL_PORT
-    sync: false
-  - key: MAIL_HOST
-    sync: false
-  - key: MAIL_SCHEME
-    sync: false
-  - key: MAIL_MAILER
-    sync: false
-  - key: REDIS_PORT
-    sync: false
-  - key: REDIS_PASSWORD
-    sync: false
-  - key: REDIS_HOST
-    sync: false
-  - key: REDIS_CLIENT
-    sync: false
-  - key: MEMCACHED_HOST
-    sync: false
-  - key: CACHE_STORE
-    sync: false
-  - key: QUEUE_CONNECTION
-    sync: false
-  - key: FILESYSTEM_DISK
-    sync: false
-  - key: BROADCAST_CONNECTION
-    sync: false
-  - key: SESSION_DOMAIN
-    sync: false
-  - key: SESSION_PATH
-    sync: false
-  - key: SESSION_ENCRYPT
-    sync: false
-  - key: SESSION_LIFETIME
-    sync: false
-  - key: SESSION_DRIVER
-    sync: false
-  - key: DB_PASSWORD
-    sync: false
-  - key: DB_USERNAME
-    sync: false
-  - key: DB_DATABASE
-    sync: false
-  - key: DB_PORT
-    sync: false
-  - key: DB_HOST
-    sync: false
-  - key: DB_CONNECTION
-    sync: false
-  - key: GEMINI_API_KEY
-    sync: false
-  - key: LOG_LEVEL
-    sync: false
-  - key: LOG_DEPRECATIONS_CHANNEL
-    sync: false
-  - key: LOG_STACK
-    sync: false
-  - key: LOG_CHANNEL
-    sync: false
-  - key: BCRYPT_ROUNDS
-    sync: false
-  - key: PHP_CLI_SERVER_WORKERS
-    sync: false
-  - key: APP_MAINTENANCE_DRIVER
-    sync: false
-  - key: APP_FAKER_LOCALE
-    sync: false
-  - key: APP_FALLBACK_LOCALE
-    sync: false
-  - key: APP_LOCALE
-    sync: false
-  - key: APP_URL
-    sync: false
-  - key: APP_DEBUG
-    sync: false
-  - key: APP_KEY
-    sync: false
-  - key: APP_ENV
-    sync: false
-  - key: APP_NAME
-    sync: false
-  - key: APP_ENV
-    value: production
-  - key: APP_DEBUG
-    value: false
-  - key: APP_KEY
-    generateValue: true
-  region: singapore
-  buildCommand: composer install --no-dev --optimize-autoloader npm install && npm run build php artisan migrate --force
-  startCommand: php artisan serve --host 0.0.0.0 --port 10000
-  autoDeployTrigger: commit
-version: "1"
+  - type: web
+    name: laravel-app
+    env: php
+    plan: free
+    buildCommand: |
+      composer install --no-dev --optimize-autoloader
+      npm install && npm run build
+      php artisan migrate --force
+    startCommand: php artisan serve --host 0.0.0.0 --port 10000
+    envVars:
+      - key: APP_ENV
+        value: production
+      - key: APP_DEBUG
+        value: false
+      - key: APP_KEY
+        generateValue: true
