--- a/render.yaml
+++ b/render.yaml
@@ -5,9 +5,13 @@ services:
     plan: free
     buildCommand: |
       composer install --no-dev --optimize-autoloader
-      npm install && npm run build
+      npm install
+      npm run build
+      php artisan config:cache
+      php artisan route:cache
+      php artisan view:cache
       php artisan migrate --force
-    startCommand: php artisan serve --host 0.0.0.0 --port 10000
+    startCommand: php artisan serve --host 0.0.0.0 --port $PORT
     envVars:
       - key: APP_ENV
         value: production
@@ -15,3 +19,11 @@ services:
         value: false
       - key: APP_KEY
         generateValue: true
+      - key: APP_URL
+        value: https://laravel-app.onrender.com
+      - key: CACHE_DRIVER
+        value: file
+      - key: SESSION_DRIVER
+        value: file
+      - key: QUEUE_CONNECTION
+        value: sync
