--- a/.env
+++ b/.env
@@ -22,12 +22,12 @@ LOG_LEVEL=debug
 
 GEMINI_API_KEY= AIzaSyDkLEe_MnQfH0rFmiYJIn0laZV5jCqpS1s
 
-DB_CONNECTION=pgsql
-DB_HOST=db
-DB_PORT=5432
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=
 DB_DATABASE=cap_db
-DB_USERNAME=suroot
-DB_PASSWORD=123456
+DB_USERNAME=root
+DB_PASSWORD=''
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
