added analytics and christmas theme but planned to make it seasonal

--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-GEMINI_API_KEY= AIzaSyDkLEe_MnQfH0rFmiYJIn0laZV5jCqpS1s
+GEMINI_API_KEY=AIzaSyDCG1cZTL67YhAdvZJ5ZzbbSOcD-MkMdTo
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
